--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+          BUILD_DIR: ${{ secrets.BUILD_DIR }}
+          REMOTE_BRANCH: ${{ secrets.REMOTE_BRANCH }}
         uses: burden/jekyll-deploy-gh-pages@master
